




[workspace]
resolver = "2"
members = [
    "pingora",
    "pingora-core",
    "pingora-pool",
    "pingora-error",
    "pingora-limits",
    "pingora-timeout",
    "pingora-header-serde",
    "pingora-proxy",
    "pingora-cache",
    "pingora-http",
    "pingora-lru",
    "pingora-openssl",
    "pingora-boringssl",
    "pingora-runtime",
    "pingora-rustls",
    "pingora-s2n",
    "pingora-ketama",
    "pingora-load-balancing",
    "pingora-memory-cache",
    "tinyufo",
]

[workspace.dependencies]
bstr = "1.12.0"
tokio = "1"
tokio-stream = { version = "0.1" }
async-trait = "0.1.42"
httparse = "=1.8.0"
bytes = "1.0"
derivative = "2.2.0"
http = "1.0.0"
log = "0.4"
h2 = ">=0.4.11"
once_cell = "1"
lru = "0.14"
ahash = ">=0.8.9"

[profile.bench]
debug = true
