[package]
name = "cache-lock-bug-repro"
version = "0.1.0"
edition = "2021"
description = "Reproduction of Pingora cache lock client disconnect bug"

# Keep this package out of the parent workspace
[workspace]

[[bin]]
name = "slow-origin"
path = "src/bin/slow_origin.rs"

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"

[[bin]]
name = "test-client"
path = "src/bin/test_client.rs"

[dependencies]
# Pingora dependencies - use path to local checkout
pingora = { path = "../pingora" }
pingora-core = { path = "../pingora-core" }
pingora-proxy = { path = "../pingora-proxy" }
pingora-cache = { path = "../pingora-cache" }
pingora-http = { path = "../pingora-http" }
pingora-error = { path = "../pingora-error" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# Logging
env_logger = "0.10"
log = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Time utilities
chrono = "0.4"

# HTTP types
http = "1.0"
bytes = "1.0"

# For the slow origin server
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }

once_cell = "1.18"
