[package]
name = "npci-router-adapter"
version = "0.1.0"
edition = "2021"
authors = ["NPCI Router Team"]
description = "Production-grade multi-tenant NPCI router adapter built on Pingora"

[dependencies]
# Pingora dependencies
pingora-core = { path = "../pingora-core" }
pingora-proxy = { path = "../pingora-proxy" }
pingora-load-balancing = { path = "../pingora-load-balancing" }
pingora-http = { path = "../pingora-http" }
pingora-limits = { path = "../pingora-limits" }
pingora-error = { path = "../pingora-error" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"

# Logging and tracing
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
once_cell = "1.19"

# HTTP
http = "1.0"
bytes = "1.5"

# TLS
openssl = "0.10"
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.0"

# Time
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.0"
arc-swap = "1.6"
num_cpus = "1.16"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# HTTP server for metrics
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "npci-router"
path = "src/main.rs"

[[example]]
name = "simple_router"
path = "examples/simple_router.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
