[package]
name = "pingora-header-serde"
version = "0.3.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["compression"]
keywords = ["http", "compression", "pingora"]
exclude = ["samples/*"]
description = """
HTTP header (de)serialization and compression for Pingora.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_header_serde"
path = "src/lib.rs"

[[bin]]
name = "trainer"
path = "src/trainer.rs"

[dependencies]
zstd = "0.13.1"
zstd-safe = { version = "7.1.0", features = ["std"] }
http = { workspace = true }
bytes = { workspace = true }
httparse = { workspace = true }
pingora-error = { version = "0.3.0", path = "../pingora-error" }
pingora-http = { version = "0.3.0", path = "../pingora-http" }
thread_local = "1.0"
