[package]
name = "pingora-ketama"
version = "0.6.0"
description = "Rust port of the nginx consistent hash function"
authors = ["Pingora Team <pingora@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["caching", "algorithms"]
keywords = ["hash", "hashing", "consistent", "pingora"]

[dependencies]
crc32fast = "1.3"
i_key_sort = { version = "0.10.1", optional = true, features = ["allow_multithreading"] }

[dev-dependencies]
criterion = "0.7"
csv = "1.2"
dhat = "0.3"
env_logger = "0.11"
log = { workspace = true }
rand = "0.9.2"

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "memory"
harness = false

[features]
heap-prof = []
v2 = ["i_key_sort"]