[package]
name = "pingora-limits"
version = "0.1.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
description = "A library for rate limiting and event frequency estimation"
edition = "2018"

[lib]
name = "pingora_limits"
path = "src/lib.rs"

[dependencies]
ahash = "0"

[dev-dependencies]
rand = "0"
dashmap = "5"
dhat = "0"

[[bench]]
name = "benchmark"
harness = false

[features]
dhat-heap = [] # for benchmark only
