[package]
name = "pingora-limits"
version = "0.3.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
description = "A library for rate limiting and event frequency estimation"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["algorithms"]
keywords = ["rate-limit", "pingora"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_limits"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }

[dev-dependencies]
rand = "0"
dashmap = "5"
dhat = "0"

[[bench]]
name = "benchmark"
harness = false

[features]
dhat-heap = [] # for benchmark only
