[package]
name = "pingora-load-balancing"
version = "0.5.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["network-programming"]
keywords = ["proxy", "pingora"]
description = """
Common load balancing features for Pingora proxy.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_load_balancing"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
pingora-http = { version = "0.5.0", path = "../pingora-http" }
pingora-error = { version = "0.5.0", path = "../pingora-error" }
pingora-core = { version = "0.5.0", path = "../pingora-core", default-features = false }
pingora-ketama = { version = "0.5.0", path = "../pingora-ketama" }
pingora-runtime = { version = "0.5.0", path = "../pingora-runtime" }
arc-swap = "1"
fnv = "1"
rand = "0.8"
tokio = { workspace = true }
futures = "0"
log = { workspace = true }
http = { workspace = true }
derivative.workspace = true

[dev-dependencies]

[features]
default = []
openssl = ["pingora-core/openssl", "openssl_derived"]
boringssl = ["pingora-core/boringssl", "openssl_derived"]
rustls = ["pingora-core/rustls", "any_tls"]
openssl_derived = ["any_tls"]
any_tls = []
