[package]
name = "pingora-lru"
version = "0.5.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["algorithms", "caching"]
keywords = ["lru", "cache", "pingora"]
description = """
LRU cache that focuses on memory efficiency, concurrency and persistence.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_lru"
path = "src/lib.rs"

[dependencies]
hashbrown = "0"
parking_lot = "0"
arrayvec = "0"
rand = "0.8"

[dev-dependencies]
lru = { workspace = true }

[[bench]]
name = "bench_linked_list"
harness = false

[[bench]]
name = "bench_lru"
harness = false
