[package]
name = "pingora-prometheus"
version = "0.8.0"
authors = ["Pingora Team at Cloudflare <pingora@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "http", "prometheus", "pingora"]
description = """
A Prometheus metrics HTTP server for pingora services.
"""

[lib]
name = "pingora_prometheus"
path = "src/lib.rs"

[dependencies]
pingora-core = { version = "0.8.0", path = "../pingora-core", default-features = false }
prometheus = "0.14"
async-trait = { workspace = true }
http = { workspace = true }
