[package]
name = "pingora-proxy"
version = "0.8.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.84"
repository = "https://github.com/cloudflare/pingora"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "http", "proxy", "pingora"]
exclude = ["tests/*"]
description = """
Pingora HTTP proxy APIs and traits.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_proxy"
path = "src/lib.rs"

[dependencies]
pingora-error = { version = "0.8.0", path = "../pingora-error" }
pingora-core = { version = "0.8.0", path = "../pingora-core", default-features = false }
pingora-cache = { version = "0.8.0", path = "../pingora-cache", default-features = false }
tokio = { workspace = true, features = ["macros", "net"] }
pingora-http = { version = "0.8.0", path = "../pingora-http" }
http = { workspace = true }
futures = "0.3"
bytes = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
h2 = { workspace = true }
once_cell = { workspace = true }
clap = { version = "4", features = ["derive"] }
regex = "1"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = [
    "gzip",
    "rustls-tls",
    "http2",
], default-features = false }
httparse = { workspace = true }
tokio-test = "0.4"
env_logger = "0.11"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
http-body-util = "0.1"
tokio-tungstenite = "0.26"
pingora-limits = { version = "0.8.0", path = "../pingora-limits" }
pingora-load-balancing = { version = "0.8.0", path = "../pingora-load-balancing", default-features=false }
pingora-prometheus = { version = "0.8.0", path = "../pingora-prometheus" }
prometheus = "0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[target.'cfg(unix)'.dev-dependencies]
hyperlocal = "0.9"

[features]
default = []
openssl = ["pingora-core/openssl", "pingora-cache/openssl", "openssl_derived"]
boringssl = [
    "pingora-core/boringssl",
    "pingora-cache/boringssl",
    "openssl_derived",
]
rustls = ["pingora-core/rustls", "pingora-cache/rustls", "any_tls"]
s2n = ["pingora-core/s2n", "pingora-cache/s2n", "any_tls"]
openssl_derived = ["any_tls"]
any_tls = []
sentry = ["pingora-core/sentry"]
upstream_modules = []
connection_filter = ["pingora-core/connection_filter"]
trace = ["pingora-cache/trace"]
early_body_buffer = []

[[example]]
name = "connection_filter"
required-features = ["connection_filter"]

[[example]]
name = "body_routing"
required-features = ["early_body_buffer"]

# or locally cargo doc --config "build.rustdocflags='--cfg doc_async_trait'"
[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_async_trait"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_async_trait)'] }
