[package]
name = "pingora-runtime"
version = "0.8.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "non-blocking", "pingora"]
description = """
Multithreaded Tokio runtime with the option of disabling work stealing.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
rand = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
once_cell = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thread_local = "1"
log = { workspace = true }
dial9-tokio-telemetry = { version = "0.3.10", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "net"] }

[[bench]]
name = "hello"
harness = false

[features]
default = []
dial9 = ["dep:dial9-tokio-telemetry"]
dial9-worker-s3 = [
    "dial9",
    "dep:aws-sdk-s3",
    "dial9-tokio-telemetry/worker-s3",
]
dial9-cpu-profiling = ["dial9", "dial9-tokio-telemetry/cpu-profiling"]
