[package]
name = "pingora-rustls"
version = "0.3.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "tls", "ssl", "pingora"]
description = """
RusTLS async APIs for Pingora.
"""

[lib]
name = "pingora_rustls"
path = "src/lib.rs"
