[package]
name = "pingora-rustls"
version = "0.5.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "tls", "ssl", "pingora"]
description = """
RusTLS async APIs for Pingora.
"""

[lib]
name = "pingora_rustls"
path = "src/lib.rs"

[features]
ring = ["rustls/ring", "dep:ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "dep:aws-lc-rs"]

[dependencies]
log = "0.4.21"
pingora-error = {version = "0.5.0", path = "../pingora-error"}
ring = { version = "0.17.12", optional = true }
aws-lc-rs = { version = "1.8.1", optional = true }
rustls = { version = "0.23.12", default-features =  false, features = ["logging", "std", "tls12"] }
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.7.0"
tokio-rustls = "0.26.0"
no_debug = "3.1.0"
