[package]
name = "pingora-timeout"
version = "0.5.0"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "pingora"]
description = """
Highly efficient async timer and timeout system for Tokio runtimes.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_timeout"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = [
    "time",
    "rt-multi-thread",
    "macros",
    "sync",
] }
pin-project-lite = "0.2"
once_cell = { workspace = true }
parking_lot = "0.12"
thread_local = "1.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benchmark"
harness = false
